manifests/service.yml
# Service for the API:
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
  selector:
    app: content-api
